# awsm

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  awsm-accessanalyzer-async.opam  awsm-accessanalyzer.opam  awsm-account-async.opam  awsm-account.opam  awsm-acm-async.opam  awsm-acm-pca-async.opam  awsm-acm-pca.opam  awsm-acm.opam  awsm-alexaforbusiness-async.opam  awsm-alexaforbusiness.opam  awsm-amp-async.opam  awsm-amp.opam  awsm-amplify-async.opam  awsm-amplify.opam  awsm-amplifybackend-async.opam  awsm-amplifybackend.opam  awsm-amplifyuibuilder-async.opam  awsm-amplifyuibuilder.opam  awsm-apigatewaymanagementapi-async.opam  awsm-apigatewaymanagementapi.opam  awsm-appflow-async.opam  awsm-appflow.opam  awsm-appintegrations-async.opam  awsm-appintegrations.opam  awsm-application-autoscaling-async.opam  awsm-application-autoscaling.opam  awsm-application-insights-async.opam  awsm-application-insights.opam  awsm-applicationcostprofiler-async.opam  awsm-applicationcostprofiler.opam  awsm-appmesh-async.opam  awsm-appmesh.opam  awsm-apprunner-async.opam  awsm-apprunner.opam  awsm-appstream-async.opam  (+539 more)
lib/awsm/: arn.ml  arn.mli  auth.ml  auth.mli  botocore_endpoints.mli  botodata.ml  cfg.ml  cfg.mli  client.ml  client.mli  data.mli  dune  http.ml  http.mli  import.ml  import.mli  json.ml  region.ml  region.mli  service.ml  service.mli  xml.ml  xml.mli
lib/codegen/: ast_convenience.ml  ast_convenience.mli  botocore_endpoints.ml  botocore_endpoints.mli  botocore_service.ml  botocore_service.mli  botodata.ml  cli.ml  cli.mli  cmd.ml  cmd.mli  dune  dune.ml  (+48 more)
(+945 files in other folders)
